--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "rxjs": "latest"
+    "rxjs": "latest",
+    "express": "^4.16.3",
+    "isomorphic-fetch": "^2.2.1",
+    "xml2json-light": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "nodemon --inspect src/api-server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5",
+    "rxjs": "^6.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
